Changed website title

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
 author = "Matt Pomaville"
-title = "CS631 Final Project"
+title = "Matthew Pomaville"
 disqusshortname = ""
 pluralizelisttitles = false
 ignorefiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
